corrected whitespace errors

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(255, 37, 37);
+    background-color: rgb(0, 0, 0);
 }
 
 h1 {
+    color: rgb(1, 247, 1);
     font-family: 'Press Start 2P', cursive;
     margin-bottom: 60px;                                       
 }
@@ -20,14 +21,23 @@ h1 {
 }
 
 h5 {
+    color: rgb(1, 247, 1);
     font-family: 'Press Start 2P', cursive;
+}
+
+#message {
+    color: rgb(1, 247, 1);
+}
+
+#draw {
+    color: rgb(1, 247, 1);
 }
 
 .container {
     width: 500px;
     height: 500px;
     display: grid;
-    border: 4px solid black;
+    border: 4px solid rgb(1, 247, 1);
     background-color: white;
 }
 
@@ -41,9 +51,10 @@ h5 {
 }
 
 button {
+    display: flex;
     margin-top: 10px;
     border-radius: 12px;
-    padding: 15px;
+    padding: 10px;
     font-family: 'Press Start 2P', cursive;
 }
 
@@ -55,4 +66,7 @@ button {
     background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
             linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
             linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+}
+.reset-btn {
+    background-color: rgb(1, 247, 1);
 }    
